# glfw-open-window

./: CMakeLists.txt  main.c
